# project2_27

./: .gitignore  README.md
GeoClusterAtlas/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
GeoClusterAtlas/configs/: clustering_config.json  demo_config.json  model_compare_config.json  shap_config.json
GeoClusterAtlas/data/sample/: README.md
GeoClusterAtlas/docs/: arcgis_preprocessing.md  clustering_workflow.md  open_source_release_checklist.md
GeoClusterAtlas/scripts/: generate_demo_data.py  run_clustering.py  run_demo.py  run_model_compare.py  run_shap_analysis.py
GeoClusterAtlas/src/arcgis_rf_shap/: __init__.py  cli.py  clustering.py  common.py  model_compare.py  pipeline.py  shap_analysis.py  synthetic_data.py
GeoClusterAtlas/tests/: test_clustering.py  test_model_compare.py  test_shap_analysis.py  test_synthetic_data.py
