[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-cluster-atlas"
version = "0.2.0"
description = "Open-source workflow template for spatial clustering, predictive modeling, and SHAP interpretation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "project contributors" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "shap>=0.44",
  "plotly>=5.0",
  "xgboost>=2.0",
  "lightgbm>=4.0"
]

[project.scripts]
arcgis-rf-shap = "arcgis_rf_shap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
